[gd_scene load_steps=2 format=3 uid="uid://bm0k0cgsb3e26"]

[ext_resource type="Script" path="res://scripts/ReelComponent.gd" id="1_dd2i1"]

[node name="ReelComponent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dd2i1")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Symbol1" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)

[node name="Symbol2" type="Sprite2D" parent="."]
position = Vector2(0, 180)
scale = Vector2(0.2, 0.2)

[node name="Symbol3" type="Sprite2D" parent="."]
position = Vector2(0, 360)
scale = Vector2(0.2, 0.2)
